-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b29
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258359 | 17 | Yudi Zheng | P3 | Resolved | Fixed | b02 |
| JDK-8259673 | 11.0.11-oracle | Dukebot | P3 | Resolved | Fixed | b02 |
| JDK-8260527 | 11.0.11 | Yudi Zheng | P3 | Resolved | Fixed | b01 |
When we unwind an exception and cannot find an exception handler mapped to the invocation pc, we deoptimize the caller on the stack directly in Deoptimizer::deoptimize_for_missing_exception_handler. In some corner cases (e.g., pmd without tiered compilation), the exceptionSeen flag is not updated in the interpreter due to the absence of MDO. We should directly update the exceptionSeen flag here in the deoptimize_for_missing_exception_handler.
C1 compiled code also does not update exceptionSeen accordingly. This may result in an unnecessary Graal compilation based on an out-dated profile. We should consider making that update when C1 compiled code calls into runtime for instantiating the exception object.
C1 compiled code also does not update exceptionSeen accordingly. This may result in an unnecessary Graal compilation based on an out-dated profile. We should consider making that update when C1 compiled code calls into runtime for instantiating the exception object.
- backported by
-
JDK-8258359 [JVMCI] Set exception_seen accordingly in the runtime.
-
- Resolved
-
-
JDK-8259673 [JVMCI] Set exception_seen accordingly in the runtime.
-
- Resolved
-
-
JDK-8260527 [JVMCI] Set exception_seen accordingly in the runtime.
-
- Resolved
-
(1 links to)