8257910: [JVMCI] Set exception_seen accordingly in the runtime.

Reviewed-by: kvn